--- a/home.html
+++ b/home.html
@@ -113,6 +113,13 @@
                     </h3>
                 </div>
                 <div class="row">
+			<div class="col-sm-6  news-content font-weight-bold">
+                        <p class="news-title text-center"><活動 2020.01.05></p>
+                    </div>
+                        <p class="col-sm-6 news-point">參加普羅米亞only場《極限爆燃》
+                            <br>攤位名稱-披薩螺旋力 攤位F01
+                        <a href="http://burning.gjs.tw/index.html" style="text-decoration: none;" class="link-color">(活動官網)</a>
+                        </p>
                     <div class="col-sm-6  news-content font-weight-bold">
                         <p class="news-title text-center"><活動 2019.11.2></p>
                     </div>
